# wa-automation

./: .gitignore  LICENSE  README.md  inspect_instagram.py  inspect_selectors.py  pyproject.toml  selectors_output.txt  test_instagram_workflow.py  test_send.py
src/wa_automation/: __init__.py  core.py  exceptions.py  instagram.py
