[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wa-automation" 
version = "0.2.0" 
authors = [
  { name="Rahul Barakoti", email="rahulbarakoti5@gmail.com" },
]
description = "A powerful Python library for WhatsApp Web and Instagram bot automation"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8"


dependencies = [
    "undetected-chromedriver>=3.5.0",
    "setuptools",
]


classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[project.urls]
Homepage = "https://github.com/RahulBarakoti-programming/wa-automation"
Issues = "https://github.com/RahulBarakoti-programming/wa-automation/issues"

[tool.hatch.metadata]
license = "MIT"
